<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dialog_margin_start_end"
    android:layout_marginEnd="@dimen/dialog_margin_start_end"
    app:cardCornerRadius="@dimen/dialog_corner_radius">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/rename_record_button"
        android:text="@string/rename_record"
        android:textAllCaps="false"
        android:gravity="center_vertical|center_horizontal"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_buttons_margin" />

    <Button
        android:id="@+id/share_record_button"
        android:text="@string/share_record"
        android:textAllCaps="false"
        android:gravity="center_vertical|center_horizontal"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_buttons_margin"/>

    <Button
        android:id="@+id/remove_record_button"
        android:text="@string/remove_record"
        android:textAllCaps="false"
        android:gravity="center_vertical|center_horizontal"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_buttons_margin"
        android:layout_marginBottom="@dimen/dialog_buttons_margin"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>